@@ -1,4 +1,8 @@
-﻿drkns 13.04.2015 09:52:11 +0200 - build 4346
+﻿drkns 13.04.2015 10:40:22 +0200 - build 4347
+
+1. Уточнение 4309.
+
+drkns 13.04.2015 09:52:11 +0200 - build 4346
 
 1. Уточнение 4345.
 
